--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@axe-core/react": "^4.10.2",
     "@tanstack/react-query": "^5.85.3",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "focus-trap-react": "^10.3.1",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^7.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^13.5.0",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "zustand": "^4.5.7"
